# Arealis-Gateway

./: .env  .gitignore  AWS_ECS_DEPLOYMENT_GUIDE.md  CLOUD_DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_OPTIONS.md  DIGITALOCEAN_DEPLOYMENT.md  EC2_TESTING_GUIDE.md  FLY_DEPLOYMENT.md  HEROKU_DEPLOYMENT.md  QUICK_START.md  RAILWAY_DEPLOYMENT.md  RENDER_DEPLOYMENT_CHECKLIST.md  RENDER_QUICK_REFERENCE.md  RENDER_TEAM_DEPLOYMENT_GUIDE.md  RENDER_TROUBLESHOOTING.md  TEAM_DEPLOYMENT_COORDINATION.md  TEAM_SETUP_GUIDE.md  VERCEL_DEPLOYMENT_GUIDE.md  deploy-to-render.sh  package-lock.json  package.json  start-all.sh  stop-all.sh
client_portal/: test_correct_final.csv  vercel.json
client_portal/components/: arealis-loader.tsx  batch-upload-view.tsx
client_portal/lib/: api.ts
frontend/: DEPLOYMENT.md  package-lock.json  package.json  vercel.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: arealis-loader.tsx  cinematic-logo-loader.tsx  new-hero-section.tsx
frontend/styles/: cinematic-loader.css
services/: requirements.txt
services/acc/: Dockerfile  README.md  build.sh  check_table_structure.py  database.py  gunicorn_start.py  main.py  mcp_integration.py  populate_acc_for_rca.py  pyproject.toml  render.yaml  requirements.txt  setup.py  simple_start.py  start.py
services/arl/: Dockerfile  README.md  arl_logic.py  main.py  main_complete.py  models.py  render.yaml  utils.py
services/crrak/: Dockerfile  README.md  crrak_logic.py  main.py  main_simple.py  models.py  render.yaml
services/pdr/: .env  Dockerfile  MCP_INTEGRATION.md  README.md  database.py  (+12 more)
(+19 files in other folders)
