[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arealis-acc-service"
version = "1.0.0"
description = "ACC Agent Service for Arealis Gateway"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "pydantic==2.2.0",
    "requests==2.31.0",
    "psycopg2-binary==2.9.9",
    "neo4j==5.15.0",
    "python-dotenv==1.0.0",
    "sqlalchemy==2.0.23",
    "gunicorn==21.2.0"
]

[project.optional-dependencies]
dev = []

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
